Rework metrics group and collector